--- a/src/app/View/modals/add-board/add-board.component.html
+++ b/src/app/View/modals/add-board/add-board.component.html
@@ -3,18 +3,24 @@
 >
   <div class="relative p-4 w-full ml-auto mr-auto mt-14 max-w-md max-h-full">
     <!-- Modal content -->
-    <div class="relative bg-dark-secondary rounded-lg shadow dark:bg-gray-700">
+    <div class="relative bg-dark-secondary rounded-lg shadow dark:bg-gray-700"
+    [ngClass]="{
+      'bg-dark-secondary': themeToggleService.darkTheme,
+      'bg-light-primary transition-colors duration-300 border-light-borderline text-light-text':
+        themeToggleService.lightTheme
+    }"
+    >
       <!-- Modal header -->
       <div
-        class="flex items-center justify-between p-4 md:p-5 rounded-t dark:border-gray-600"
+        class="flex items-center justify-between p-4 md:p-5 rounded-t"
       >
-        <h3 class="text-lg font-semibold text-white dark:text-white">
+        <h3 class="text-lg font-semibold  dark:">
           Add New Board
         </h3>
         <button
           (click)="modalToggleService.modalToggle('add-board', '')"
           type="button"
-          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:"
           data-modal-toggle="add-modal"
         >
           <svg
@@ -42,14 +48,18 @@
           <div class="col-span-2">
             <label
               for="name"
-              class="block mb-2 text-sm font-medium text-white dark:text-white"
+              class="block mb-2 text-sm font-medium"
               >Name</label
             >
             <input
               type="text"
               name="name"
               id="name"
-              class="bg-transparent text-white border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
+              class="bg-transparent  border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
+              [ngClass]="{
+                'border-[#3e3f4e] text-white': themeToggleService.darkTheme,
+                'border-light-borderline text-black': themeToggleService.lightTheme
+              }"
               required=""
               formControlName="title"
             />
