--- a/src/app/View/components/task-card/task-card.component.html
+++ b/src/app/View/components/task-card/task-card.component.html
@@ -1,13 +1,13 @@
 <main
   (click)="modalToggleService.modalToggle('task-details', '')"
-  class="w-72 hover:opacity-45 transition-all cursor-grab duration-200 flex flex-col py-7 px-6 rounded-lg border shadow-sm shadow-[#3e3f4e] border-[#3e3f4e]"
+  class="w-72 hover:opacity-45 transition-colors cursor-grab duration-300 flex flex-col py-7 px-6 rounded-lg border shadow-sm"
   [ngClass]="{
-   'bg-dark-secondary transition-all duration-200 text-dark-text':
+    'bg-dark-secondary transition-colors duration-300 shadow-[#3e3f4e] border-[#3e3f4e] text-dark-text':
       themeToggleService.darkTheme,
-    'bg-light-primary transition-all duration-300 text-light-text':
+    'bg-light-primary transition-colors duration-300 shadow-light-borderline border-light-borderline text-light-text':
       themeToggleService.lightTheme
   }"
-  >
+>
   <p class="font-bold">Add search endpoints</p>
   <p class="text-slate-400 mt-2 font-bold text-[0.8rem]">1 of 2 subtasks</p>
 </main>
