--- a/src/app/View/components/theme-toggle/theme-toggle.component.html
+++ b/src/app/View/components/theme-toggle/theme-toggle.component.html
@@ -13,7 +13,7 @@
     <img src="../../../../assets/icon-dark-theme.svg" alt="" class="h-5 mt-1" />
 
     <label class="switch">
-      <input type="checkbox" (click)="themeToggleService.localStorageTheme()" />
+      <input type="checkbox" (click)="themeToggleService.toggleTheme()" />
       <span class="slider"></span>
     </label>
 
