--- a/src/app/View/components/column/column.component.html
+++ b/src/app/View/components/column/column.component.html
@@ -1,8 +1,9 @@
 <main>
   <div class="head flex gap-2 mb-4">
     <div class="circle h-4 w-4  bg-indigo-600 rounded-full"></div>
-    <p class="text-gray-400 uppercase font-bold text-[0.8rem] tracking-widest">Todo(7)</p>
+    <p class="text-gray-400 uppercase font-bold text-[0.8rem] tracking-widest">{{columnName}}</p>
   </div>
 
+  <!-- @for(task of; track task){} -->
   <app-task-card />
 </main>
