--- a/src/app/View/components/new-column/new-column.component.html
+++ b/src/app/View/components/new-column/new-column.component.html
@@ -1,9 +1,9 @@
 <main
 (click)="modalToggleService.modalToggle('add-column', 'Add Column')"
-  class="h-[80vh] group mb-12 cursor-pointer flex items-center gap-1 justify-center rounded-lg w-72 bg-gradient-to-b"
+  class="h-[80vh] mt-[37px] group mb-12 cursor-pointer flex items-center gap-1 justify-center rounded-lg w-72 bg-gradient-to-b"
   [ngClass]="{
     ' from-[#2b2c37] via-[#2b2c37] to-dark-background': themeToggleService.darkTheme,
-    ' from-gray-300 via-gray-300 to-light-background': themeToggleService.lightTheme
+    ' from-[#828fa330] via-[#828fa320] to-light-background': themeToggleService.lightTheme
   }"
 >
   <svg width="12" height="12" xmlns="http://www.w3.org/2000/svg" class="fill-[#828FA3] group-hover:fill-[#635FC7]">
