feat/ initial active board

--- a/src/app/View/components/column/column.component.html
+++ b/src/app/View/components/column/column.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="head flex gap-2 mb-4">
     <div
-      class="circle h-4 w-4 bg-indigo-600 rounded-full"
+      class="circle h-4 w-4 rounded-full"
       [ngClass]="
      {'bg-[#49C4E5]':columnNumber === 0,
      'bg-[#8471F2]':columnNumber === 1,
