feat/ border name from header

--- a/src/app/View/components/board/board.component.html
+++ b/src/app/View/components/board/board.component.html
@@ -1,8 +1,8 @@
 <div
-  class="flex gap-4 p-3 mt-2 group cursor-pointer pl-7 w-[280px] hover:bg-[#635FC7] hover:text-white rounded-full rounded-tl-none rounded-bl-none"
+  class="flex gap-4 p-3 mt-2 group cursor-pointer pl-7 w-[280px] hover:bg-[#635FC730] hover:text-white rounded-full rounded-tl-none rounded-bl-none"
   [ngClass]="{
-    'bg-[#635FC7] text-white': boardName === currentBoardName,
-    'bg-[#635FC7] text-white ': firstBoardColor
+    'bg-[#635FC7] hover:bg-[#635FC7] text-white': boardName === currentBoardName || firstBoardColor,
+    ' hover:bg-[#635FC730] ': boardName !== currentBoardName && !firstBoardColor
   }"
 >
   <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
@@ -15,8 +15,7 @@
     1.556 0 0 0 1.556-1.555v-1.555Zm0-7.112V2.89a1.555 1.555 0 0 0-1.556-1.556h-2v3.111h3.556Z"
       class="h-4 fill-[#828FA3] group-hover:fill-white"
       [ngClass]="{
-        ' fill-white': boardName === currentBoardName,
-        ' fill-white ': firstBoardColor
+        ' fill-white': boardName === currentBoardName|| firstBoardColor
       }"
     />
   </svg>
