--- a/src/app/View/pages/sign-up/sign-up.component.html
+++ b/src/app/View/pages/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <section class="bg-gray-50 pb-44 lg:pb-0 dark:bg-gray-900 lg:flex">
   <img
-  src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?q=80&w=1939&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"  
+  src="https://images.unsplash.com/photo-1627850604058-52e40de1b847?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"  
   alt=""
     class="lg:w-[50%] w-[100%] lg:h-[100vh] h-[303px] object-cover lg:object-cover"
   />
@@ -25,9 +25,24 @@
         <h1
           class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
         >
-          Sign in to your account
+          Create an account with us
         </h1>
         <form class="space-y-4 md:space-y-6" action="#">
+          <div>
+            <label
+              for="email"
+              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+              >Your name</label
+            >
+            <input
+              type="name"
+              name="name"
+              id="email"
+              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              placeholder="username"
+              required=""
+            />
+          </div>
           <div>
             <label
               for="email"
@@ -69,11 +84,6 @@
                   required=""
                 />
               </div>
-              <div class="ml-3 text-sm">
-                <label for="remember" class="text-gray-500 dark:text-gray-300"
-                  >Remember me</label
-                >
-              </div>
             </div>
             <a
               href="#"
@@ -88,11 +98,11 @@
             Sign in
           </button>
           <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-            Don’t have an account yet?
+            Have an account already?
             <a
-             routerLink="/register"
+              routerLink="/login"
               class="font-medium text-primary-600 hover:underline dark:text-primary-500"
-              >Sign up</a
+              >Sign in</a
             >
           </p>
         </form>
