--- a/src/app/View/pages/login/login.component.html
+++ b/src/app/View/pages/login/login.component.html
@@ -27,7 +27,7 @@
         >
           Sign in to your account
         </h1>
-        <form class="space-y-4 md:space-y-6" action="#">
+        <form class="space-y-4 md:space-y-6" [formGroup]="signInForm" (ngSubmit)="onSubmit()">
           <div>
             <label
               for="email"
@@ -36,7 +36,7 @@
             >
             <input
               type="email"
-              name="email"
+              formControlName="email"
               id="email"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               placeholder="name@company.com"
@@ -51,7 +51,7 @@
             >
             <input
               type="password"
-              name="password"
+              formControlName="password"
               id="password"
               placeholder="••••••••"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
